finished image download stage, added gemini captioner

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-beautifulsoup4==4.8.1
-requests==2.22.0
-ImageHash==4.0
-Pillow==6.2.1
-psycopg2-binary==2.8.4
-PyYAML==5.2
+beautifulsoup4
+requests
+ImageHash
+Pillow
+psycopg2-binary
+PyYAML
+aiohttp
+urllib3
+aiofiles
+asyncio
+opencv-python
+numpy
+tqdm
+google
